# AoC22

./: .gitignore  CMakeLists.txt
.github/workflows/: sonar.yml
c++/: CMakeLists.txt
c++/cl/: CMakeLists.txt  main.cpp
c++/cl/src/: day19.cl  lib.cpp
c++/cmake/: StandardBuild.cmake
c++/common/: CMakeLists.txt  main.cpp
c++/day_01/: CMakeLists.txt  main.cpp
c++/day_01/src/: lib.cpp  lib.hpp
c++/day_01/test/: lib_test.cpp
c++/day_02/: CMakeLists.txt  main.cpp
c++/day_02/test/: day_2b_test.cpp
c++/day_03/: CMakeLists.txt  main.cpp
c++/day_03/src/: lib.cpp  lib.hpp
c++/day_03/test/: lib_test.cpp
c++/day_04/: CMakeLists.txt  main.cpp
c++/day_04/src/: day_4a.cpp
c++/day_05/: CMakeLists.txt  main.cpp
c++/day_05/src/: day_5a.cpp  day_5b.cpp
c++/day_06/: CMakeLists.txt  main.cpp
c++/day_06/src/: day_6a.hpp  day_6b.cpp  day_6b.hpp
c++/day_06/test/: day_6a_test.cpp  day_6b_test.cpp
c++/day_07/: CMakeLists.txt
c++/day_07/src/: day_7.cpp
c++/day_07/test/: day_7_test.cpp
c++/day_08/: CMakeLists.txt
c++/day_08/src/: lib.cpp  lib.hpp
c++/day_09/: CMakeLists.txt
c++/day_09/src/: lib.cpp
c++/day_10/: CMakeLists.txt
c++/day_10/src/: lib.cpp
c++/day_10/test/: lib_test.cpp
c++/day_11/: CMakeLists.txt  input.txt
c++/day_11/src/: lib.cpp  lib.hpp
c++/day_11/test/: lib_test.cpp
c++/day_12/: CMakeLists.txt  main.cpp
c++/day_12/src/: lib.cpp
c++/day_12/test/: lib_test.cpp
c++/day_13/: CMakeLists.txt  main.cpp
c++/day_13/src/: day13.cpp  day13.hpp
c++/day_13/test/: day13_test.cpp
c++/day_14/: CMakeLists.txt  main.cpp
c++/day_14/src/: day14.cpp  day14.hpp
c++/day_14/test/: day14_test.cpp
c++/day_15/: CMakeLists.txt
c++/day_15/src/: lib.cpp  lib.hpp
c++/day_15/test/: lib_test.cpp
c++/day_16/: CMakeLists.txt  main.cpp
c++/day_16/src/: lib.cpp  lib.hpp
c++/day_16/test/: lib_test.cpp
c++/day_17/: CMakeLists.txt
c++/day_17/src/: lib.cpp  lib.hpp
c++/day_17/test/: lib_test.cpp
c++/day_18/: CMakeLists.txt
c++/day_18/src/: lib.cpp  lib.hpp
c++/day_18/test/: lib_test.cpp
c++/day_19/: CMakeLists.txt
c++/day_19/src/: lib.cpp  lib.hpp
c++/day_19/test/: lib_test.cpp
c++/day_1a/: CMakeLists.txt  main.cpp
c++/day_1a/src/: day_1a.cpp
c++/day_1a/test/: day_1a_test.cpp
c++/day_1b/: CMakeLists.txt
c++/day_1b/src/: day_1b.cpp  day_1b.hpp
c++/day_20/: CMakeLists.txt
c++/day_20/src/: lib.cpp  lib.hpp
c++/day_20/test/: lib_test.cpp
c++/day_21/: CMakeLists.txt
c++/day_21/src/: lib.cpp
c++/day_21/test/: lib_test.cpp
c++/day_22/: CMakeLists.txt
c++/day_22/src/: lib.cpp  lib.hpp
c++/day_22/test/: lib_test.cpp
c++/day_23/: CMakeLists.txt
c++/day_23/src/: lib.cpp  lib.hpp
c++/day_23/test/: lib_test.cpp
c++/day_24/src/: lib.cpp  lib.hpp
c++/day_24/test/: lib_test.cpp
c++/day_25/: CMakeLists.txt
c++/day_25/src/: lib.cpp  lib.hpp
c++/day_25/test/: lib_test.cpp
c++/day_2a/: CMakeLists.txt  main.cpp
c++/day_2a/src/: day_2a.cpp  day_2a.hpp
c++/day_2a/test/: day_2a_test.cpp
c++/day_2b/: CMakeLists.txt  main.cpp
c++/day_2b/src/: day_2b.cpp  day_2b.hpp
c++/day_3a/: CMakeLists.txt
c++/day_3b/: CMakeLists.txt  main.cpp
c++/day_3b/test/: day_3b_test.cpp
c++/day_4a/: main.cpp
c++/day_4b/: main.cpp
c++/day_4b/test/: day_4b_test.cpp
c++/day_5b/: CMakeLists.txt
c++/day_6a/: CMakeLists.txt  main.cpp
c++/day_6a/src/: day_6a.cpp
c++/day_6b/: CMakeLists.txt  main.cpp
c++/day_7/: CMakeLists.txt  main.cpp
c++/day_7/src/: day_7.hpp
c++/day_8/: CMakeLists.txt
c++/day_8/src/: lib.cpp
c++/day_8/test/: lib_test.cpp
c++/day_9/: CMakeLists.txt
c++/day_9/test/: lib_test.cpp
cmake/: CodeCoverage.cmake  StandardBuild.cmake
common/: main.cpp  main.hpp
day_1a/: CMakeLists.txt  day_1a.cpp  day_1a.hpp  day_1a_test.cpp  main.cpp
day_1a/src/: day_1a.hpp
day_1b/: CMakeLists.txt  day_1b.cpp  day_1b.hpp  day_1b_test.cpp  main.cpp
day_1b/test/: day_1b_test.cpp
day_2a/: CMakeLists.txt  day_1b.cpp  day_2a.cpp  main.cpp
day_2a/test/: day_2a_test.cpp
day_2b/: CMakeLists.txt  day_2b_test.cpp  main.cpp
day_3a/: CMakeLists.txt  day_3a.cpp  day_3a.hpp  day_3a_test.cpp  main.cpp
day_3b/: CMakeLists.txt  day_3b.hpp  main.cpp
day_3b/src/: day_3b.cpp
day_4a/: CMakeLists.txt  main.cpp
day_4a/src/: day_4a.hpp
day_4a/test/: day_4a_test.cpp
day_4b/: CMakeLists.txt  main.cpp
day_4b/src/: day_4b.cpp  day_4b.hpp
day_4b/test/: day_4b_test.cpp
day_5a/: CMakeLists.txt  main.cpp
day_5a/src/: day_5a.hpp
day_5a/test/: day_5a_test.cpp
day_5b/: main.cpp
day_5b/src/: day_5b.hpp
day_5b/test/: day_5b_test.cpp
python/aoc/: day01.py  day03.py  day06.py  day07.py  day09.py  day10.py  day_02.py  day_04.py  day_05.py
python/tests/: test_day01.py  test_day02.py  test_day03.py  test_day04.py  test_day05.py  test_day06.py  test_day07.py  test_day09.py  test_day10.py  test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py  test_day_06.py
scripts/cmake/: CodeCoverage.cmake
